# bde

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  manage.ps1  pyproject.toml  readme.rst
.devcontainer/: DockerFile  compose.yaml  devcontainer.json
.github/workflows/: full-development.yml  full-production.yml  full-staging.yml  reusable-full.yml
.vscode_user/User/: settings.json
doc/: conf.py  index.rst
doc/api/: base64.rst  base64url.rst  commons.rst  version.rst
doc/usecases/: base64.rst  base64url.rst
other/cmake/: tag.cmake  utils.cmake  version.cmake
other/cmake/preload/: off_target_host_debug.cmake  off_target_host_release.cmake
other/cppcheck/: suppressions.xml
src/: CMakeLists.txt
src/base64/: CMakeLists.txt  base64.c
src/inc/bde/: bde.h
src/inc/bde/base64/: decode.h  encode.h  url_decode.h  url_encode.h
src/inc/bde/other/: commons.h
tests/: CMakeLists.txt
tests/cmocka/: CMakeLists.txt
tests/tests/: CMakeLists.txt
tests/tests/.test_utils/: cmocka_defs.c  cmocka_defs.h
tests/tests/.test_utils/samples/: samples.c  samples.h
tests/tests/base64/: CMakeLists.txt  test_base64_decode.c  test_base64_encode.c  test_base64url_decode.c  test_base64url_encode.c
